--- a/navbar/index.html
+++ b/navbar/index.html
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+<nav>
+    <div class="logo">CSSnippet</div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <ul class="nav-links" id="navLinks">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">ABOUT</a></li>
+    </ul>
 
-<body>
+    <div class="btns">
+        <button class="btn">Login</button>
+    </div>
 
-
-    <nav>
-        <div class="logo">CSSnippet</div>
-        <ul class="nav-links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">PORTFOLIO</a></li>
-            <li><a href="#">ABOUT</a></li>
-        </ul>
-        <div class="btns"><button class="btn">Login</button></div>
-    </nav>
-
-
-
-
-</body>
-
-</html>
+    <!-- Hamburger -->
+    <div class="hamburger" id="hamburger">
+        ☰
+    </div>
+</nav>
