--- a/navbar/index.html
+++ b/navbar/index.html
@@ -1,19 +1,41 @@
-<nav>
-    <div class="logo">CSSnippet</div>
+<!DOCTYPE html>
+<html lang="en">
 
-    <ul class="nav-links" id="navLinks">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">SERVICES</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">ABOUT</a></li>
-    </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <div class="btns">
-        <button class="btn">Login</button>
-    </div>
+<body>
 
-    <!-- Hamburger -->
-    <div class="hamburger" id="hamburger">
-        ☰
-    </div>
-</nav>
+
+    <nav>
+        <div class="logo">CSSnippet</div>
+
+        <ul class="nav-links" id="navLinks">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">PORTFOLIO</a></li>
+            <li><a href="#">ABOUT</a></li>
+        </ul>
+
+        <div class="btns">
+            <button class="btn">Login</button>
+        </div>
+
+        <!-- Hamburger -->
+        <div class="hamburger" id="hamburger">
+            ☰
+        </div>
+    </nav>
+
+
+    <script src="script.js">
+
+    </script>
+
+</body>
+
+</html>
